test/e2e/testmanifests/ingress-keymatch-echo.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-traefik-keymatch
  labels:
    app: echo
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-casbin-auth-keymatch@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: keymatch.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-nginx-keymatch
  labels:
    app: echo
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://casbin-auth-keymatch.casbin-auth.svc.cluster.local/v1/auth"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Casbin-Auth-JWT,WWW-Authenticate"
    nginx.ingress.kubernetes.io/auth-method: GET
spec:
  ingressClassName: nginx
  rules:
    - host: keymatch.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-haproxy-keymatch
  labels:
    app: echo
  annotations:
    haproxy.org/standalone-backend: "true"
    haproxy.org/backend-config-snippet: |
      filter spoe engine forward-auth-on-backend-event config /usr/local/etc/haproxy/spoe-forward-keymatch-auth.conf
      http-request deny unless { var(txn.forward_auth.allow) -m int eq 1 }
spec:
  ingressClassName: haproxy
  rules:
    - host: keymatch.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 80
