test/e2e/testmanifests/ingress-rbac-echo.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-traefik-rbac
  labels:
    app: echo
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-casbin-auth-rbac@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: rbac.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-nginx-rbac
  labels:
    app: echo
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://casbin-auth-rbac.casbin-auth.svc.cluster.local/v1/auth"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Casbin-Auth-JWT,WWW-Authenticate"
    nginx.ingress.kubernetes.io/auth-method: GET
spec:
  ingressClassName: nginx
  rules:
    - host: rbac.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-haproxy-rbac
  labels:
    app: echo
  annotations:
    haproxy.org/standalone-backend: "true"
    haproxy.org/backend-config-snippet: |
      filter spoe engine forward-auth-on-backend-event config /usr/local/etc/haproxy/spoe-forward-rbac-auth.conf
      http-request deny unless { var(txn.forward_auth.allow) -m int eq 1 }
spec:
  ingressClassName: haproxy
  rules:
    - host: rbac.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 80


---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-envoy-gateway-rbac
spec:
  parentRefs:
    - name: eg-gw
      namespace: envoy-gateway-system
  hostnames:
    - rbac.127.0.0.1.nip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echo
          port: 80


---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: echo-envoy-gateway-rbac
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name:  echo-envoy-gateway-rbac
  extAuth:
    http:
      backendRefs:
        - name: casbin-auth-rbac
          namespace: casbin-auth
          port: 80
      path: /v1/auth

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: echo-envoy-gateway-rbac
  namespace: casbin-auth
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: default
  to:
    - group: ""          # core API group
      kind: Service
      name: casbin-auth-rbac
